Pixel size parsing for 0.5 models